--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 sphinx == 8.1.3
 sphinx-rtd-theme == 3.0.2
+sphinx_design == 0.6.1
 sphinxmark
 git+https://github.com/FDSN/jsonschema-markdown.git@main
