--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ sphinx == 8.1.3
 sphinx-rtd-theme == 3.0.2
 sphinx_design == 0.6.1
 sphinxmark
-git+https://github.com/FDSN/jsonschema-restructuredtext.git@0.0.2
+git+https://github.com/FDSN/jsonschema-restructuredtext.git@v0.0.2
